test/corpus/reader_macros.txt
===
quote symbol
===

'x

---

(source
  (quote
    (symbol)))

===
quote list
===

'(1 2 3)

---

(source
  (quote
    (list
      (number)
      (number)
      (number))))

===
quasiquote with unquote and splice
===

`(a ~b ~@c)

---

(source
  (quasiquote
    (list
      (symbol)
      (unquote
        (symbol))
      (unquote_splicing
        (symbol)))))

===
nested quasiquote with splice
===

`(~@(list 1 2) 3)

---

(source
  (quasiquote
    (list
      (unquote_splicing
        (list
          (symbol)
          (number)
          (number)))
      (number))))

===
deref
===

@x

---

(source
  (deref
    (symbol)))

===
nested deref
===

@@x

---

(source
  (deref
    (deref
      (symbol))))

===
deref list
===

@(atom 42)

---

(source
  (deref
    (list
      (symbol)
      (number))))
